--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ body{
     margin-left:80px;
     
     
+    
 }
+/* header-complete */
 .bb{
     font-size:2em;
 }
@@ -39,5 +41,70 @@ background: #E02C6D;
 font-size:1.1em;
 color:white;
 font-weight: bolder;
+font-size:1.1em;
+
+}
+.gg{
+    color:cyan;
+    text-shadow: 5px 5px 20px; lightseagreen;
+    font-size: 2em;
+    text-align:center;
+}
+.hh{
+    margin-bottom: 50px;
+}
+.ii{
+    font-size:28px;
+    font-weight:bolder;
+
+}
+.jj{
+    font-size:24px;
+}
+.kk{
+    color:gray;
+  
+}
+.ll{
+    color:#FB8200;
+}
+.mm{
+    display:flex;
+    align-items: flex-start;
+
+}
+.nn{
+    margin-top:14px; 
+}
+.oo{
+    margin-left:10.47px;
+    color:gray;
+}
+.work1>img{
+    
+    border-radius:15px;
+    height: 256px;
+    width:300px;
+    margin-left:14px;
+    margin-right:15px;
+    margin-top:17px;
+    
+   
+}
+.work2{
+    
+    width:329px;
+    height:auto;
+    background-color: #FFFFFF;
+    border-radius:5px;
+    box-shadow: 0px 0px 40px black;
+ 
+}
+.work3{
+    margin-left:14px;
+    margin-right:15px;
+    margin-top:17px;
+    
+    
 
 }
