--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body{
     
     
 }
+.zz{
+    margin-left:200px;
+}
 /* header-complete */
 .bb{
     font-size:2em;
@@ -94,17 +97,96 @@ font-size:1.1em;
 .work2{
     
     width:329px;
-    height:auto;
+    height:590px;
     background-color: #FFFFFF;
-    border-radius:5px;
-    box-shadow: 0px 0px 40px black;
+    border-radius:10px;
+    box-shadow: 0px 0px 30px black;
+    margin-bottom:30px;
+    padding:30px;
+    /* transition:transform 1.5s linear; */
  
 }
 .work3{
     margin-left:14px;
     margin-right:15px;
     margin-top:17px;
+    margin-bottom:7px;
     
     
 
 }
+.work4{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-row-gap:3;
+    margin-left:196px;
+    
+    
+}
+.work5>a{
+    text-decoration: none;
+    color: #E02C6DDE;
+    font-weight: bolder;
+    font-size:16px;
+
+}
+.work5{
+    display:flex;
+    justify-content: flex-end;
+    margin-right:50px;
+}
+ 
+.optional{
+text-align:center;
+}
+/* midddle part end */
+
+.work6{
+    background:coral;
+    
+    
+   
+
+    
+}
+.work7{
+ 
+ 
+    color:white;
+    text-align: center;
+    padding:50px;
+
+}
+    
+}
+.work8{
+    
+    text-align:center;
+    font-size:24px;
+    font-weight: bolder;
+}
+.work9{
+    font-size:24px;
+}
+.work10{
+    
+}
+.fab{
+    margin:15px;
+    font-size: 2em;
+}
+.fa-facebook-f{
+    color:blue;
+    
+}
+.fa-instagram{
+    background-image: linear-gradient(#405de6  #5851db  #833ab4   #c13584  #e1306c  #f56040);
+}
+.fa-twitter{
+    color:cornflowerblue;
+}
+.fa-youtube{
+    color:red;
+}
+
+
